--- a/fixed_boss.ini
+++ b/fixed_boss.ini
@@ -15,10 +15,20 @@ before_alert_ment = 9시 월보 타임
 alert_ment = 9시 월보 타임
 
 
+bossname = 12시 30분 이벤트몹
+bosstime = 12:30
+genPeriod = 24:00
+startDate = 2020-05-26
+before_alert_ment = 12시 30분 이벤트몹
+alert_ment = 12시 30분 이벤트몹
 
 
-
-
+bossname = 21시 30분 이벤트몹
+bosstime = 21:30
+genPeriod = 24:00
+startDate = 2020-05-26
+before_alert_ment = 21시 30분 이벤트몹
+alert_ment = 21시 30분 이벤트몹
 
 
 
