--- a/boss.ini
+++ b/boss.ini
@@ -17,19 +17,91 @@ nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
-bossname = 기셀라
+bossname = 1기셀라
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
-bossname = 오르카
+bossname = 1오르카
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
-bossname = 팬서
+bossname = 1팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 2기셀라
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 2오르카
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 2팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 3기셀라
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 3오르카
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 3팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 4기셀라
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 4오르카
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 4팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 5기셀라
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 5오르카
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 5팬서
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
@@ -54,6 +126,30 @@ before_alert_ment = 입니다. (톨란분지)
 alert_ment = 입니다. (톨란분지)로 오세요
 
 bossname = 1바눌린
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. (톨란분지)
+alert_ment = 입니다. (톨란분지)로 오세요
+
+bossname = 2델락
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. (톨란분지)
+alert_ment = 입니다. (톨란분지)로 오세요
+
+bossname = 2세티벨
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. (톨란분지)
+alert_ment = 입니다. (톨란분지)로 오세요
+
+bossname = 2파스빌
+gentime = 10:00
+nogencheck = 1
+before_alert_ment = 입니다. (톨란분지)
+alert_ment = 입니다. (톨란분지)로 오세요
+
+bossname = 2바눌린
 gentime = 10:00
 nogencheck = 1
 before_alert_ment = 입니다. (톨란분지)
@@ -192,7 +288,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (1서버 - 루나트라 - 허상)
 alert_ment = 입니다. (1서버 - 루나트라 - 허상)로 오세요
 
-bossname = 1도그룩
+bossname = 1도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다. (1서버 - 루나트라 - 허상)
@@ -222,7 +318,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (2서버 - 루나트라 - 허상)
 alert_ment = 입니다. (2서버 - 루나트라 - 허상)로 오세요
 
-bossname = 2도그룩
+bossname = 2도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다. (2서버 - 루나트라 - 허상)
@@ -252,7 +348,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (3서버 - 루나트라 - 허상)
 alert_ment = 입니다. (3서버 - 루나트라 - 허상)로 오세요
 
-bossname = 3도그룩
+bossname = 3도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다. (3서버 - 루나트라 - 허상)
@@ -282,7 +378,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (4서버 - 루나트라 - 허상)
 alert_ment = 입니다. (4서버 - 루나트라 - 허상)로 오세요
 
-bossname = 4도그룩
+bossname = 4도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다. (4서버 - 루나트라 - 허상)
@@ -312,7 +408,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (5서버 - 루나트라 - 허상)
 alert_ment = 입니다. (5서버 - 루나트라 - 허상)로 오세요
 
-bossname = 5도그룩
+bossname = 5도그록
 gentime = 08:00
 nogencheck = 1
 before_alert_ment = 입니다. (5서버 - 루나트라 - 허상)
