--- a/boss.ini
+++ b/boss.ini
@@ -11,7 +11,7 @@ nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 결전)
 alert_ment = 입니다. (루나트라 - 황혼의땅 - 결전)로 오세요
 
-bossname = 볼피
+bossname = 1볼피
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
@@ -35,6 +35,12 @@ nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
+bossname = 2볼피
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
 bossname = 2기셀라
 gentime = 14:00
 nogencheck = 1
@@ -48,6 +54,12 @@ before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
 bossname = 2팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 3볼피
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
@@ -71,6 +83,12 @@ nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
+bossname = 4볼피
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
 bossname = 4기셀라
 gentime = 14:00
 nogencheck = 1
@@ -84,6 +102,12 @@ before_alert_ment = 입니다. (루나트라 - 기만의 분지)
 alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
 
 bossname = 4팬서
+gentime = 14:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 기만의 분지)
+alert_ment = 입니다. (루나트라 - 기만의 분지)로 오세요
+
+bossname = 5볼피
 gentime = 14:00
 nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 기만의 분지)
