--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 709205395180093464
 textchannel = 709205395180093463
 ladderchannel = 
 jungsanchannel = 
