--- a/boss.ini
+++ b/boss.ini
@@ -1,9 +1,28 @@
 -----일반보스-----
-bossname = 격돌케만
+
+bossname = 키알
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 천공의전장)
+alert_ment = 입니다. (루나트라 - 황혼의땅 - 천공의전장)로 오세요
+
+bossname = 반디아스
+gentime = 12:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 승패의성채)
+alert_ment = 입니다. (루나트라 - 황혼의땅 - 승패의성채)로 오세요
+
+bossname = 카비라스
+gentime = 24:00
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 승패의성채)
+alert_ment = 입니다. (루나트라 - 황혼의땅 - 승패의성채)로 오세요
+
+bossname = 사투베딘
 gentime = 08:10
 nogencheck = 1
-before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 격돌)
-alert_ment = 입니다. (루나트라 - 황혼의땅 - 격돌)로 오세요
+before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 사투의언덕)
+alert_ment = 입니다. (루나트라 - 황혼의땅 - 사투의언덕)로 오세요
 
 bossname = 결전두크라스
 gentime = 08:00
