--- a/boss.ini
+++ b/boss.ini
@@ -24,6 +24,12 @@ nogencheck = 1
 before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 사투의언덕)
 alert_ment = 입니다. (루나트라 - 황혼의땅 - 사투의언덕)로 오세요
 
+bossname = 격돌케만
+gentime = 08:10
+nogencheck = 1
+before_alert_ment = 입니다. (루나트라 - 황혼의땅 - 격돌)
+alert_ment = 입니다. (루나트라 - 황혼의땅 - 격돌)로 오세요
+
 bossname = 결전두크라스
 gentime = 08:00
 nogencheck = 1
